typescript/checker/tests/conformance/parser/ecmascript5/Protected/Protected6.ts.stderr
error: Unexpected token Some(Word(m))
 --> $DIR/tests/conformance/parser/ecmascript5/Protected/Protected6.ts:2:20
  |
2 |   static protected m() { }
  |                    ^

